[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvtracker"
version = "0.1.0"
description = "Multi-View 3D Point Tracking"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "easydict>=1.13",
    "einops>=0.7.0",
    "flow-vis>=0.1",
    "huggingface-hub>=0.30.2",
    "kornia>=0.7.3",
    "matplotlib>=3.8.3",
    "mediapy>=1.2.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.2",
    "psutil>=7.2.1",
    "pypng>=0.20220715.0",
    "rerun-sdk>=0.21.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]

[tool.setuptools.packages.find]
include = ["mvtracker*"]

[tool.setuptools.package-data]
mvtracker = ["configs/**/*.yaml", "configs/**/*.md", "configs/**/*.txt"]
